修复了了高分辨率自适应

--- a/css/nutssss.css
+++ b/css/nutssss.css
@@ -12,7 +12,7 @@ body {
 
 #box {
     /* background-color: red; */
-    width: 100%;
+    width: 1500px;
     height: 100px;
     margin: 0 auto;
     padding-top: 5%;
