--- a/css/nutssss.css
+++ b/css/nutssss.css
@@ -7,7 +7,7 @@ body {
     background-image: linear-gradient(to left, rgba(255, 0, 149, 0.2), rgba(0, 247, 255, 0.2)), url(../img/bg.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: cover;
+    background-size: 100% 100%;
 }
 
 #box {
