--- a/css/nutssss.css
+++ b/css/nutssss.css
@@ -3,11 +3,13 @@
     padding: 0;
 }
 
-body {
+html, body {
+    width: 100%;
+    height: 100%;
     background-image: linear-gradient(to left, rgba(255, 0, 149, 0.2), rgba(0, 247, 255, 0.2)), url(../img/bg.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100% 100%;
+    background-size: cover;
 }
 
 #box {
@@ -310,7 +312,7 @@ body {
     }
 }
 
-@media screen and (max-width: 1110px) {
+@media screen and (max-width: 1120px) {
     .meBox {
         float: none;
         margin: 100px auto 100px;
